# Geometry

./: .gitignore  CMakeLists.txt  README.md  base_geometry.h  base_point.h  rotation.h  statistic.h  tests.cpp  tests_base_geometry.cpp
test/: CMakeLists.txt  edge.cpp  line.cpp  plane.cpp  point.cpp  rotation.cpp  sphere.cpp  stat_plane.cpp  stat_plane_vector.cpp  stat_vector.cpp  triangle.cpp
